[package]
name = "bimrkltr"
version = "0.1.0"
edition = "2024"
description="A high-performance, compile-time sized Merkle tree implementation for Rust, featuring bidirectional tree support and generic hash functions."

[dependencies]
sha2 = "0.10.9"
hex = "0.4.3"
[dev-dependencies]
insta = { version = "1.43.2", features = ["yaml"] }
[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
